# otto

./: .gitignore  README.md
.claude/: launch.json  settings.local.json
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: database.py  logging.py
backend/app/drivers/: __init__.py  base.py  postgres.py  sqlite.py
backend/app/models/: __init__.py  connection.py  history.py  saved_query.py  visualization.py
backend/app/routes/: ai.py  ai_chat.py  databases.py  history.py  import_data.py  query.py  rows.py  saved_queries.py  search.py  visualizations.py
backend/app/utils/: export.py  sql_safety.py
backend/tests/: conftest.py  test_ai.py  test_databases.py  test_history.py  test_import_csv.py  test_query.py  test_row_edit.py  test_row_editing.py  test_row_mutations.py  test_rows.py  test_sql_injection.py  test_sql_safety.py  test_visualizations.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  react-grid-layout.d.ts
frontend/src/components/: AddRowModal.tsx  AiInsights.tsx  AskOtto.tsx  ChatPanel.tsx  ColumnProfilePanel.tsx  ColumnProfiler.tsx  CommandPalette.tsx  ConnectModal.tsx  DataChat.tsx  DataTable.tsx  DataView.tsx  FilterBar.tsx  ImportCSVModal.tsx  ImportModal.tsx  InsertRowModal.tsx  InsightPanel.tsx  MultiTabQueryEditor.tsx  OverviewTab.tsx  QueryEditor.tsx  QueryInsights.tsx  QueryPlan.tsx  QueryWorkspace.tsx  RowDetailPanel.tsx  RowInspectorPanel.tsx  SQLEditor.tsx  SchemaGraph.tsx  SchemaPanel.tsx  SearchView.tsx  (+6 more)
scripts/: create_sample_db.py
(+3 files in other folders)
