[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi==0.115.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.35",
    "uvicorn==0.30.6",
]

[dependency-groups]
dev = [
    "httpx==0.27.2",
    "pytest==8.3.3",
]
